--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  font-family: 'Roboto', sans-serif;
+  font-family:sans-serif;
 }
 
 :root {
@@ -50,7 +50,7 @@ justify-content: center;
 }
 
 h1 {
-  font-family: 'Roboto', sans-serif;
+  font-family: sans-serif;
   font-size: 8vh;
   color: var(--font-color);
   text-align: center;
@@ -61,7 +61,7 @@ h1 {
 }
 
 h2 {
-  font-family: 'Roboto', sans-serif;
+  font-family: sans-serif;
   font-size: 6vh;
   color: var(--font-color);
   text-align: center;
@@ -72,7 +72,7 @@ h2 {
 }
 
 h3 {
-  font-family: 'Roboto', sans-serif;
+  font-family: sans-serif;
   font-size: 3vh;
   /*font-weight: bold;*/
   color: var(--font-color);
@@ -86,7 +86,7 @@ h3 {
 }
 
 .p-text{
-  font-family: 'Roboto', sans-serif;
+  font-family: sans-serif;
   font-size: 3vh;
   color: var(--font-color);  
   display: flex;
